--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
+    "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.7.4",
     "vuetify": "^1.0.19",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@babel/polyfill": "^7.0.0-beta.49",
+    "@kazupon/vue-i18n-loader": "^0.3.0",
     "@mdi/font": "^2.4.85",
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
